[project]
name = "questions-and-answers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "pypdf>=6.6.2",
    "wikipedia>=1.4.0",
]
